--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,12 @@
   </head>
   <body class="leading-normal tracking-normal text-gray-900 bg-image" style="font-family: 'Source Sans Pro', sans-serif;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="bg-indigo-900 text-center py-4 lg:px-4">
+      <div class="p-2 bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+        <span class="flex rounded-full bg-indigo-500 uppercase px-2 py-1 text-xs font-bold mr-3">Info</span>
+        <span class="font-semibold mr-2 text-left flex-auto">Take&Stop is on mainnet only</span>
+      </div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
